<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/action_game"
        android:orderInCategory="100"
        android:title="@string/action_game"
        android:icon="@drawable/ic_action_game"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/action_update"
        android:icon="@drawable/ic_action_update"
        app:showAsAction="ifRoom" />
</menu>
